Changed elevator pitch and added list of partner links to bottom

--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 			</header>
 			<div class="contact">
 				<p>
-					Holistic massage & beauty at <a
-						href="http://www.otterburntower.com/">
-						Otterburn Castle</a>
-					and mobile around Northumberland
-					 &amp; Newcastle.
+					Holistic, massage &amp; beauty therapy in and around
+					Northumberland, Newcastle &amp; at selected exclusive
+					<a href="#partners">partners.</a>
+				</p>
+				<p>
 					<a href="mailto:louise@facehandsfeet.co.uk">Email me</a>
 					or phone 07801 434613 to book a treatment.
-
 				</p>
 			</div>
 			<form
@@ -223,6 +222,24 @@
 
 					</tbody>
 				</table>
+				<h2 id="partners">Partners</h2>
+				<ul>
+					<li>
+						<a href="http://www.otterburncastle.com/">
+							Otterburn Castle
+						</a>
+					</li>
+					<li>
+						<a href="http://www.redewaterlakesidelodges.co.uk">
+							Redewater Lakeside Lodges
+						</a>
+					</li>
+					<li>
+						<a href="http://www.annefenwickholistics.co.uk">
+							Northern Natural Therapies
+						</a>
+					</li>
+				</ul>
 			</article>
 			<footer>
 				
